[gd_scene load_steps=15 format=3 uid="uid://dh606i2o7tyx3"]

[ext_resource type="Script" uid="uid://de6tbq0a6v3xj" path="res://Scripts/game_main.gd" id="1_ek0ft"]
[ext_resource type="Material" uid="uid://c7djbnxpeasph" path="res://Textures/leftest_ground_tracks.tres" id="1_me05n"]
[ext_resource type="Material" uid="uid://dagy7ggnajc6m" path="res://Textures/ground_tracks.tres" id="2_ek0ft"]
[ext_resource type="Material" uid="uid://dduikhdoviq0d" path="res://Textures/rightest_ground_tracks.tres" id="3_blpvf"]
[ext_resource type="AudioStream" uid="uid://cxku5gt3ncpp" path="res://Charts/Yual - AnoYozora.mp3" id="5_ikmlx"]
[ext_resource type="Script" uid="uid://c7jxwjv8m1aih" path="res://Scripts/score_display.gd" id="6_blpvf"]
[ext_resource type="PackedScene" uid="uid://bg67a4jkycqkk" path="res://Scenes/sky_cursor.tscn" id="7_12ds4"]
[ext_resource type="Script" uid="uid://cb6ok5i7tsmcd" path="res://Scripts/time_display.gd" id="8_ikmlx"]

[sub_resource type="Environment" id="Environment_7ldut"]
background_mode = 1
background_color = Color(0.8371184, 0.67228323, 0.9798587, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_h337q"]
size = Vector3(8.16, 0.02, 0.04)

[sub_resource type="BoxMesh" id="BoxMesh_6n8b6"]
size = Vector3(5, 0.02, 0.04)

[sub_resource type="PlaneMesh" id="PlaneMesh_12ds4"]
material = ExtResource("1_me05n")
size = Vector2(1.5, 50)

[sub_resource type="PlaneMesh" id="PlaneMesh_me05n"]
material = ExtResource("2_ek0ft")
size = Vector2(1, 50)

[sub_resource type="PlaneMesh" id="PlaneMesh_y0gf2"]
material = ExtResource("3_blpvf")
size = Vector2(1.5, 50)

[node name="GameMain" type="Node3D"]
script = ExtResource("1_ek0ft")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7ldut")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8829476, 0.4694716, 0, -0.4694716, 0.8829476, 0, 3.5, 2.71)
fov = 60.0
far = 200.0

[node name="Tracks" type="Node" parent="."]

[node name="SkyJudgementLine" type="MeshInstance3D" parent="Tracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.645, -0.5)
mesh = SubResource("BoxMesh_h337q")

[node name="JudgementLine" type="MeshInstance3D" parent="Tracks"]
mesh = SubResource("BoxMesh_6n8b6")
skeleton = NodePath("../..")

[node name="Track0" type="MeshInstance3D" parent="Tracks"]
transform = Transform3D(0.8660254, 0.5, 0, -0.5, 0.8660254, 0, 0, 0, 1, -2.85, 0.375, -20)
mesh = SubResource("PlaneMesh_12ds4")
skeleton = NodePath("../Track2")

[node name="Track1" type="MeshInstance3D" parent="Tracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6, 0, -20)
mesh = SubResource("PlaneMesh_me05n")
skeleton = NodePath("../Track2")

[node name="Track2" type="MeshInstance3D" parent="Tracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.525, 0, -20)
mesh = SubResource("PlaneMesh_me05n")

[node name="Track3" type="MeshInstance3D" parent="Tracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.525, 0, -20)
mesh = SubResource("PlaneMesh_me05n")
skeleton = NodePath("../Track2")

[node name="Track4" type="MeshInstance3D" parent="Tracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6, 0, -20)
mesh = SubResource("PlaneMesh_me05n")
skeleton = NodePath("../Track2")

[node name="Track5" type="MeshInstance3D" parent="Tracks"]
transform = Transform3D(0.8660254, -0.5, 0, 0.5, 0.8660254, 0, 0, 0, 1, 2.85, 0.375, -20)
mesh = SubResource("PlaneMesh_y0gf2")
skeleton = NodePath("../Track2")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ikmlx")
autoplay = true

[node name="ScoreDisplay" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.8205142, 3.4637258, -1.2485552)
pixel_size = 0.0075
script = ExtResource("6_blpvf")

[node name="SkyCursor" parent="." instance=ExtResource("7_12ds4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.645, -0.5)

[node name="TimeDisplay" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2974324, 1.0551133, -0.1547594)
visible = false
pixel_size = 0.0075
text = "1111111111"
script = ExtResource("8_ikmlx")
